themes/averi/style.css
:root {
	color-scheme: light;
	
	--page: #fff0d3; /* background colour */
	--text: #424242;
	--link-default: #05563e;
	--link-hover: #0aae7d;
	--link-visited: #05563e;
	
	--title: #ffe5b9;
	--title-color: #ad203f;
	--title-border: #AAA;
	
	--input-borders: #623d2a;
	--input-color: #2a1a12;
	--input-background: #fff5e6;
	
	--header: #ffe5b9;
	--header-border: #BBB;
	
	--block: #ffe5b9;
	--block-border: #CCC;
	
	--danger-color: #000;
	--danger-background: #FAA;
	
	--zebra-border: #CCC;
	--zebra-header: #DDD;
	--zebra-odd: #EFEFEF;
	--zebra-even: #E0E0E0;
	
	--border-radius: 0.35rem;
	--block-padding: 0.5rem;
}
/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *                  things common to all pages                    *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
:root {
	font-size: 14px;
	font-family: sans-serif;
}

* {
	box-sizing: border-box;
}


INPUT, TEXTAREA, SELECT, BUTTON {
	background: var(--input-background);
	border-color: var(--input-borders);
	border-radius: 5px;
	border-width: 1px;
	margin-bottom: 2px;
	color: black;
}

H1, H2, H3 {
	margin: 0;
	text-align: left;
	/* not sure why top-padding appears visually larger than other padding in headers...
	 r*educing top-padding to compensate */
	padding: calc(var(--block-padding) * 0.5) var(--block-padding) var(--block-padding) var(--block-padding);
}

BODY {
	background: var(--page);
	color: var(--text);
	margin: 1rem;
	padding-bottom: 50px;
}
BODY.layout-grid {
	display: grid;
	grid-template-columns: 15rem auto;
	grid-gap: 1rem;
}

HEADER {
	grid-column: 1 / 3;
	grid-row: 1;
}
HEADER H1 {
	max-height: 3rem;
	overflow: hidden;
	color: var(--title-color);
}
HEADER H1 A {
	color: var(--text);
}

SECTION {
	margin-bottom: 1rem;
	border-radius: var(--border-radius);
}
SECTION:last-child {
	margin-bottom: 0;
}
SECTION>H3 {
	background: var(--header);
	border: 1px solid var(--header-border);
}
SECTION>:first-child {
	border-top-left-radius: var(--border-radius);
	border-top-right-radius: var(--border-radius);
}
SECTION>:last-child {
	border-bottom-left-radius: var(--border-radius);
	border-bottom-right-radius: var(--border-radius);
}
SECTION>.blockbody {
	background: var(--block);
	border: 1px solid var(--block-border);
	border-top: none;
	padding: var(--block-padding);
}
H1, SECTION, FOOTER {
	box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
}
FOOTER {
	clear: both;
	font-size: 0.7rem;
	text-align: center;
	background: var(--title);
	border: 1px solid var(--title-border);
	border-radius: var(--border-radius);
	padding: var(--block-padding);
	bottom: 0;
	position: fixed;
	left: 0;
	width: 100%;
}

THEAD {
	font-weight: bold;
}
TD {
	vertical-align: top;
	text-align: left;
}

TABLE.zebra {border-spacing: 0; border: 2px solid var(--zebra-border);}
TABLE.zebra TD, TABLE.zebra TH {vertical-align: middle; padding: 4px;}
TABLE.zebra THEAD {position: sticky;top: 0;}
TABLE.zebra THEAD TR:last-of-type TD, TABLE.zebra THEAD TR:last-of-type TH {border-bottom: 2px solid var(--zebra-border);}
TABLE.zebra TFOOT TR:first-of-type TD, TABLE.zebra TFOOT TR:first-of-type TH {border-top: 2px solid var(--zebra-border);}
TABLE.zebra TBODY TR TD, TABLE.zebra TBODY TR TH {border-bottom: 1px solid var(--zebra-header);}
TABLE.zebra TR:nth-child(odd) {background: var(--zebra-odd);}
TABLE.zebra TR:nth-child(even) {background: var(--zebra-even);}
TABLE.zebra INPUT:not([type="checkbox"]):not([type="radio"]),
TABLE.zebra SELECT,
TABLE.zebra TEXTAREA,
TABLE.zebra BUTTON {width: 100%;}

A {
	text-decoration: none;
	color: var(--link-default);
}
A:hover {
	text-decoration: underline;
	color: var(--link-hover);
}
A:visited {
	color: var(--link-visited);
}

UL {
	text-align: left;
}

CODE {
	background: var(--header);
	font-size: 0.9rem;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *             the navigation bar, and all its blocks             *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

NAV {
	grid-column: 1;
	grid-row: 2;
	text-align: left;
}
NAV .blockbody {
	font-size: 0.85rem;
	text-align: left;
	overflow: hidden;
}
NAV TABLE {
	width: 100%;
}
NAV INPUT:not([type="checkbox"]):not([type="radio"]),
NAV TEXTAREA,
NAV BUTTON,
NAV SELECT {
	width: 100%;
}

TABLE.tag_list {
	border-collapse: collapse;
}
TABLE.tag_list>THEAD {
	display: none;
}
TABLE.tag_list>TBODY>TR>TD {
	display: inline;
	padding: 0;
}
TABLE.tag_list>TBODY>TR>TD:after {
	content: " ";
}

.more:after {
	content: " >>>";
}

.tag_count:before {
	content: "(";
}
.tag_count:after {
	content: ")";
}

#handle_image_media {
	text-align: center;
}

#Statsmain .blockbody {
	padding-bottom: 15px;
}

.avatar-container {
	position: absolute;
	right: 20px;
	display: inline-flex;
}

.avatar-editor .avatar-container {
	position: relative;
	right: 0px;
}

#paginator {
position: fixed;
left:0;
bottom:0;
width:100%;
margin-bottom:50px;
box-shadow: none;
text-align: center;
}
#paginator .blockbody {
background: none;
border: none;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *                 the main part of each page                     *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

ARTICLE {
	grid-column: 2;
	grid-row: 2;
	text-align: left;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *                       mobile screens                           *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

@media screen and (width <= 800px) {
	BODY.layout-grid {
		grid-template-columns: auto;
	}
	HEADER {
		grid-column: 1;
		grid-row: 1;
	}
	ARTICLE {
		grid-column: 1;
		grid-row: 2;
		margin-right: 0;
	}
	NAV {
		grid-column: 1;
		grid-row: 3;
		margin: auto;
	}
	FOOTER {
		grid-column: 1;
		grid-row: 4;
	}
	#image-list .blockbody {
	margin: 0;
	}
	.shm-image-list {
		justify-content: left;
	}
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *                     specific page types                        *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#short-wiki-description > .blockbody {
padding-bottom: 15px;
}
#short-wiki-description h2 {
margin: 0 0 0.4em;
}

#pagelist {
margin-top: 32px;
}

.comment {
	padding: var(--block-padding);
	border-bottom: 1px solid var(--block-border);
}
.comment:first-child {
	padding-top: 0;
}
.comment:last-child {
	border-bottom: none;
}
.thumb IMG {
	border: 1px solid var(--block-border);
	background: var(--block);
	box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
}

